--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.15.7",
-    "sass-loader": "^10.0.1"
+    "sass-loader": "^10.0.1",
+    "swiper": "^6.7.5"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
